Bump Java to 22